--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.itv.exercise</groupId>
-    <artifactId>supermarket.checkout</artifactId>
+    <artifactId>supermarket</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
